# apollo-federation-sample

./: README.md
products-service/: .env  Cargo.toml  README.md  configuration.yaml
products-service/migrations/: 20220702140407_create_products_table.sql  20220702141439_insert_products.sql  20220703135349_create_products_table.sql  20220703135350_insert_products.sql
products-service/scripts/: init_db.sh
products-service/src/: configuration.rs  lib.rs  main.rs  startup.rs
products-service/src/graphql/: handlers.rs  mod.rs  models.rs  mutation.rs  query.rs  schema.rs
products-service/src/repository/: mod.rs  models.rs  repository.rs
products-service/src/routes/: create_product.rs  get_product_by_sku.rs  list_products.rs  mod.rs  up.rs
products-service/tests/: integration_tests.rs
