[package]
name = "products-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "products-service"

[dependencies]
actix-web = "4"
config = "0.13.1"
serde = { version = "1", features = ["derive"]}
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = "0.4.19"
async-trait = "0.1.56"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = "1.19.2"
